# cess-examples

./: .editorconfig  .gitignore  LICENSE  README.md
cess-node/: Cargo.toml  README.md
cess-node/pallets/template/: Cargo.toml  README.md
examples/: README.md
examples/deploy-sc-ink/flipper/: Cargo.toml
examples/deploy-sc-solidity/: hardhat.config.ts  package.json  pnpm-lock.yaml
examples/deploy-sc-solidity/contracts/: Flipper.sol
examples/frontend/: README.md  package.json  pnpm-lock.yaml
examples/frontend/src/: App.js  Balances.js  Events.js  Interactor.js  ProofOfExistenceInk.js  ProofOfExistenceSolidity.js  Transfer.js  Upgrade.js
examples/go/: .env.example  README.md  go.mod  go.sum
examples/go/tutorials/: simple-client.go
examples/hardhat/: .solhint.json  README.md  hardhat.config.ts  package.json
examples/hardhat/contracts/: Flipper.sol  ProofOfExistence.sol
examples/hardhat/deploy/: 00_deploy_Flipper.ts  01_deploy_PoE.ts  01_deploy_ProofOfExistence.ts
examples/ink/flipper/: README.md  lib.rs
examples/ink/poe/: README.md
examples/inks/poe/: Cargo.toml
examples/js/src/: index.ts
examples/poe-ink/contract/: Cargo.toml  lib.rs
examples/poe-ink/frontend/: config-overrides.js  package.json
examples/poe-solidity/contract/: poe.sol
examples/poe-solidity/frontend/: package.json  pnpm-lock.yaml
examples/tut-deoss-ts/: package.json  pnpm-lock.yaml
examples/tut-go-sdk/: .gitignore  Makefile  README.md
examples/tut-ts-sdk/: README.md  package.json  pnpm-lock.yaml
frontend/: package.json  pnpm-lock.yaml
frontend/public/: index.html
frontend/src/: BlockNumber.js  Events.js  Interactor.js  ProofOfExistenceInk.js  Transfer.js  index.js
frontend/src/substrate-lib/: index.js
go/tutorials/: simple-client_test.go
hardhat/: .env.example  README.md  hardhat.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
hardhat/contracts/: Flipper.sol  ProofOfExistence.sol  erc20.sol
hardhat/deploy/: 00_deploy_Flipper.ts  03_deploy_erc20.ts
ink/: README.md
ink/nft_market/: Cargo.toml  README.md  lib.rs
ink/nft_market/impls/: market.rs  mod.rs  types.rs
ink/poe/: Cargo.toml  lib.rs
js/: .gitignore  LICENSE  package.json  pnpm-lock.yaml
js/src/: index.ts
(+34 files in other folders)
