[package]
name = "pallet-template"
version = "0.1.0"
description = "Sample template pallet"
authors = ["CESS LAB"]
edition = "2021"
license = "MIT-Apache-2.0"
publish = false
homepage = "https://github.com/CESSProject/cess-examples"
repository = "https://github.com/CESSProject/cess-examples"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.1", default-features = false, features = [
	"derive",
] }
scale-info = { workspace = true, features = ["derive", "serde"] }
frame-support = { workspace = true }
frame-system = {workspace = true }
sp-std = { workspace = true }

# Optional
frame-benchmarking = { workspace = true, optional = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true, features = ["serde"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"sp-runtime/try-runtime",
]
